// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Node.svelte > should render node 1`] = `
<body>
  <div>
    <node
      aria-expanded="false"
      aria-selected="false"
      class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
      data-path=""
      id="id-"
      role="treeitem"
    >
       
      <item>
        
         
        <p>
          Alpha
        </p>
        
      </item>
    </node>
  </div>
</body>
`;

exports[`Node.svelte > should render node in rtl 1`] = `
<body>
  <div>
    <node
      aria-expanded="false"
      aria-selected="false"
      class="node min-h-5 flex flex-row cursor-pointer select-none items-center flex-row-reverse"
      data-path=""
      id="id-"
      role="treeitem"
    >
       
      <item>
        
         
        <p>
          An RTL Node
        </p>
        
      </item>
    </node>
  </div>
</body>
`;

exports[`Node.svelte > should render node sibling node 1`] = `
<body>
  <div>
    <node
      aria-expanded="false"
      aria-selected="false"
      class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
      data-path=""
      id="id-"
      role="treeitem"
    >
       
      <item>
        
         
        <p>
          Sibling Node
        </p>
        
      </item>
    </node>
  </div>
</body>
`;

exports[`Node.svelte > should render node when path changes 1`] = `
<body>
  <div>
    <node
      aria-expanded="false"
      aria-selected="false"
      class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
      data-path="0"
      id="id-0"
      role="treeitem"
    >
       
      <item>
        
         
        <p>
          A Node
        </p>
        
      </item>
    </node>
  </div>
</body>
`;

exports[`Node.svelte > should render node when path changes 2`] = `
<body>
  <div>
    <node
      aria-expanded="false"
      aria-selected="false"
      class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
      data-path="1"
      id="id-1"
      role="treeitem"
    >
       
      <item>
        
         
        <p>
          A Node
        </p>
        
      </item>
    </node>
  </div>
</body>
`;

exports[`Node.svelte > should render node when selected 1`] = `
<body>
  <div>
    <node
      aria-expanded="false"
      aria-selected="true"
      class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
      data-path=""
      id="id-"
      role="treeitem"
    >
       
      <item>
        
         
        <p>
          A Selected Node
        </p>
        
      </item>
    </node>
  </div>
</body>
`;

exports[`Node.svelte > should render node with collapsed icon 1`] = `
<body>
  <div>
    <node
      aria-expanded="false"
      aria-selected="false"
      class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
      data-path=""
      id="id-"
      role="treeitem"
    >
       
      <item>
        
         
        <p>
          Collapsed Node
        </p>
        
      </item>
    </node>
  </div>
</body>
`;

exports[`Node.svelte > should render node with expanded icon 1`] = `
<body>
  <div>
    <node
      aria-expanded="true"
      aria-selected="false"
      class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
      data-path=""
      id="id-"
      role="treeitem"
    >
       
      <item>
        
         
        <p>
          Expanded Node
        </p>
        
      </item>
    </node>
  </div>
</body>
`;

exports[`Node.svelte > should render node with path 1`] = `
<body>
  <div>
    <node
      aria-expanded="false"
      aria-selected="false"
      class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
      data-path="0"
      id="id-0"
      role="treeitem"
    >
       
      <item>
        
         
        <p>
          Example
        </p>
        
      </item>
    </node>
  </div>
</body>
`;
